--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -1,17 +1,115 @@
 p, br {
-    font-family: 'Montserrat', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
 }
 
 h2 {
-    font-family: 'Montserrat', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 22px; 
+    text-align: center;
 }
 
+.logo img {
+border: 0px solid;
+}
 a {
     text-decoration: underline;
+    color: black;
 }
 
 img {
     border: 2px black solid;
 }
+
+.button { /* referenced from w3schools */
+    background-color: yellow; 
+    border: 1px black solid;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .navselect {
+    background-color: yellow;
+  }
+
+.item {
+    padding: 20px;
+    justify-content: center;
+    margin: 10px;
+}
+
+.item:hover {
+    background-color: yellow;
+   
+   
+  
+    
+  }
+
+.item:hover a {
+    font-weight: 700;
+  }
+
+
+
+
+.indexgrid { /* css tricks and firefox */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+    
+  }
+
+  .logo {
+    grid-column: 1;
+    grid-row: 1;
+
+  }
+
+  .linebreak {
+    grid-column: 1 / 4;
+    grid-row: 2;
+
+  }
+
+  nav {
+
+    grid-column: 2;
+    grid-row: 3;
+    text-align: center;
+    font-family: 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
+
+  }
+
+  .productdetail {
+
+    grid-column: 2;
+    grid-row: 4;
+    justify-items: center;
+   
+
+  }
+
+  .products {
+
+    grid-column: 2;
+    grid-row: 4;
+    justify-items: center;
+
+  }
+
+
+
+  .shopcart {
+
+    grid-column: 2;
+    grid-row: 4;
+    justify-items: center;
+
+  }
