--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -7,6 +7,17 @@ h2 {
     font-family: 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 22px; 
     text-align: center;
+    font-weight: normal;
+}
+
+hr {
+  
+  border-width: 3px;
+}
+
+.remove {
+  font-family: 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 12px;
 }
 
 .logo img {
@@ -84,6 +95,7 @@ img {
     grid-row: 3;
     text-align: center;
     font-family: 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
+   
 
   }
 
@@ -92,6 +104,7 @@ img {
     grid-column: 2;
     grid-row: 4;
     justify-items: center;
+ 
    
 
   }
@@ -104,6 +117,13 @@ img {
 
   }
 
+  .dropdown {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 70px;
+    padding-left: 70px;
+  }
+
 
 
   .shopcart {
@@ -111,5 +131,26 @@ img {
     grid-column: 2;
     grid-row: 4;
     justify-items: center;
+    text-align: center;
+    
+  }
 
+  .buttonprice {
+
+    grid-column: 2;
+    grid-row: 5;
+    justify-items: center;
+    text-align: center;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+
+
+  }
+
+  form {
+    font-family: 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
   }
