--- a/solution-hw2/style.css
+++ b/solution-hw2/style.css
@@ -12,11 +12,13 @@ h2 {
 	text-align: right;
 }
 hr {
-	border-width: 3px;
+	border: 1px solid black;
+  
 }
 .remove {
 	font-family: Helvetica, 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 12px;
+  
 }
 .logo img {
 	border: 0px solid;
@@ -67,13 +69,12 @@ img {
 .indexgrid {
 	/* container for everything */
 	display: grid;
-	grid-template-columns: 1fr;
-	gap: 10px;
+	grid-template-columns: repeat(3, 1fr);
 	grid-auto-rows: minmax(100px, auto);
 }
 .navgrid {
 	/* top navigation grid */
-	grid-column: 1;
+	grid-column: 1 / 4;
 	grid-row: 1;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
@@ -90,16 +91,25 @@ nav {
 	grid-row: 1;
 	display: grid;
 	grid-template-columns: repeat(6, 1fr);
-	grid-template-rows: 50px 50px 50px;
+	grid-template-rows: 50px 20px 50px;
 }
 .navproduct {
 	grid-column: 5;
 	grid-row: 1;
+  font-family: Helvetica, 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
+	font-size: 16px;
+  justify-content: center;
+  padding: 10px;
+  paddng-top: 20px;
 }
 
 .navcart {
 	grid-column: 6;
 	grid-row: 1;
+  font-family: Helvetica, 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
+	font-size: 16px;
+  padding: 10px;
+  paddng-top: 20px;
 }
 
 .linebreak {
@@ -109,12 +119,65 @@ nav {
 h2 {
 	grid-column: 1 / 4;
 	grid-row: 3;
+  padding-top: 20px;
 }
+
 .products {
-	grid-column: 1;
+	grid-column: 1 / 4;
 	grid-row: 2;
-	justify-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+  grid-gap: 20px; 
+  grid-auto-rows: minmax(100px, auto);
+  justify-items: center;
 }
+
+#item1 {
+
+  grid-column: 1;
+	grid-row: 1;
+  
+
+}
+
+#item2 {
+
+  grid-column: 2;
+	grid-row: 1;
+
+}
+
+#item3 {
+
+  grid-column: 3;
+	grid-row: 1;
+
+}
+
+#item4 {
+
+  grid-column: 1;
+	grid-row: 2;
+
+}
+
+#item5 {
+
+  grid-column: 2;
+	grid-row: 2;
+
+}
+
+#item6 {
+
+  grid-column: 3;
+	grid-row: 2;
+
+}
+
+
+
+
 /*
 
 
