--- a/solution-hw2/style.css
+++ b/solution-hw2/style.css
@@ -1,10 +1,10 @@
 p, br {
 	font-family: Helvetica, 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 16px;
+	font-size: 24px;
 }
 h2 {
 	font-family: Helvetica, 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 22px;
+	font-size: 36px;
 	text-align: left;
 	font-weight: normal;
 }
@@ -12,7 +12,7 @@ h2 {
 	text-align: right;
 }
 hr {
-	border: 1px solid black;
+	border: 2px solid black;
   
 }
 .remove {
@@ -41,9 +41,11 @@ img {
 	font-size: 16px;
 	font-weight: bold;
 	font-family: 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
+  
 }
 .navselect {
 	background-color: yellow;
+  font-weight: 700;
 }
 .item {
 	padding: 20px;
@@ -85,6 +87,37 @@ img {
 	grid-column: 1;
 	grid-row: 1;
 }
+
+
+.dropdown {
+  margin-top: 10px;
+ 
+}
+
+.dropdown select {
+  /* https://blog.logrocket.com/creating-custom-select-dropdown-css/ */
+  width: 100%; 
+  padding: 10px; 
+  font-size: 16px; 
+  border: 1px solid black; 
+  background-color: white;
+  color: black;
+  margin-top: 10px;
+  
+}
+
+.dropdown label {
+  margin-top: 50px;
+  margin-bottom: 5px; 
+}
+
+
+.dropdown select option {
+  padding: 5px;
+}
+
+
+
 nav {
 	/* top right navigation grid */
 	grid-column: 2 / 4;
@@ -93,14 +126,21 @@ nav {
 	grid-template-columns: repeat(6, 1fr);
 	grid-template-rows: 50px 20px 50px;
 }
+
+.navproduct a, .navcart a {
+
+font-size: 24px;
+}
+
+
 .navproduct {
 	grid-column: 5;
 	grid-row: 1;
   font-family: Helvetica, 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 16px;
   justify-content: center;
-  padding: 10px;
-  paddng-top: 20px;
+  padding: 30px;
+ 
 }
 
 .navcart {
@@ -108,25 +148,26 @@ nav {
 	grid-row: 1;
   font-family: Helvetica, 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 16px;
-  padding: 10px;
-  paddng-top: 20px;
+  padding: 30px;
+  
 }
 
 .linebreak {
 	grid-column: 1 / 7;
 	grid-row: 2;
+  padding-top: 40px;
 }
 h2 {
-	grid-column: 1 / 4;
+	grid-column: 1 / 7;
 	grid-row: 3;
-  padding-top: 20px;
+  padding-top: 40px;
 }
 
 .products {
 	grid-column: 1 / 4;
 	grid-row: 2;
   display: grid;
-  grid-template-columns: repeat(3, 1fr); 
+  grid-template-columns: repeat(5, 1fr); 
   grid-gap: 20px; 
   grid-auto-rows: minmax(100px, auto);
   justify-items: center;
@@ -134,7 +175,7 @@ h2 {
 
 #item1 {
 
-  grid-column: 1;
+  grid-column: 2;
 	grid-row: 1;
   
 
@@ -142,120 +183,118 @@ h2 {
 
 #item2 {
 
-  grid-column: 2;
+  grid-column: 3;
 	grid-row: 1;
 
 }
 
 #item3 {
 
-  grid-column: 3;
+  grid-column: 4;
 	grid-row: 1;
 
 }
 
 #item4 {
 
-  grid-column: 1;
+  grid-column: 2;
 	grid-row: 2;
 
 }
 
 #item5 {
 
-  grid-column: 2;
+  grid-column: 3;
 	grid-row: 2;
 
 }
 
 #item6 {
 
-  grid-column: 3;
+  grid-column: 4;
 	grid-row: 2;
 
 }
 
-
-
-
-/*
-
-
-  .logo {
-    grid-column: 1;
-    grid-row: 1;
-
-  }
-
-  .linebreak {
-    grid-column: 1 / 4;
-    grid-row: 2;
-
-  }
-
-  nav {
-
-    grid-column: 2;
-    grid-row: 3;
-    text-align: center;
-    font-family: Helvetica, 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
-   
-
-  }
-
-  .productdetail {
-
-    grid-column: 2;
-    grid-row: 4;
-    justify-items: center;
+.shopcart {
+	grid-column: 1 / 4;
+	grid-row: 2;
  
-   
+}
 
-  }
-
-  .products {
-
-    grid-column: 2;
-    grid-row: 4;
-    justify-items: center;
-
-  }
-
-  .dropdown {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 70px;
-    padding-left: 70px;
-  }
+.productdetail {
+	grid-column: 1 / 4;
+	grid-row: 2;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);  
+  grid-auto-rows: minmax(100px, auto);
+  justify-items: start;
+ 
+ 
+}
 
 
+.productdetail {
+  grid-column: 1 / 4;
+  grid-row: 2;
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+  grid-auto-rows: minmax(100px, auto);
+  margin-right: 100px; 
+  margin-left: 100px;
+  margin-top: 50px;
+}
 
-  .shopcart {
+.productimg {
+  grid-column: 1; 
+  grid-row: 1 / 6; 
+  justify-self: center;
+}
 
-    grid-column: 2;
-    grid-row: 4;
-    justify-items: center;
-    text-align: center;
-    
-  }
+.description {
+  grid-column: 2; 
+  grid-row: 1;
+  padding: 30px; 
+}
 
-  .buttonprice {
+.dropdown {
+  grid-column: 2; 
+  grid-row: 2;
+  font-family: Helvetica, 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
+	font-size: 24px;
+}
 
-    grid-column: 2;
-    grid-row: 5;
-    justify-items: center;
-    text-align: center;
+.buttonprice {
+  grid-column: 2; 
+  grid-row: 4;
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+  grid-auto-rows: minmax(100px, auto);
+  justify-items: start;
+  align-items: start;
+}
 
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
+.productprice {
+  grid-column: 1; 
+  grid-row: 1;
+  font-weight: 700;
+  
+}
+
+#button1 {
+  margin-left: -20px;
+  grid-column: 2; 
+  grid-row: 1;
+  padding-top: 10px;
+  padding-bottom: 10px; 
+  height: auto; 
+  margin-top: 20px;
+}
 
 
-  }
 
-  form {
-    font-family: Helvetica, 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
-  }
-  */
+.productdetail .dropdown,
+.productdetail .buttonprice {
+  margin-left: 30px; 
+}
+
