--- a/solution-hw5/style.css
+++ b/solution-hw5/style.css
@@ -1,7 +1,10 @@
-p, br {
+p, br, span {
   font-family: Helvetica, 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 24px;
 }
+
+
+
 h2 {
   font-family: Helvetica, 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 36px;
@@ -175,41 +178,47 @@ h2 {
   grid-column: 4;
   grid-row: 2;
 }
-.shopcart {
-  grid-column: 1 / 4;
+
+/* shopcart grid */
+
+
+#shopcart {
+  grid-column: 2 / 4;
   grid-row: 2;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-auto-rows: auto auto 20px 70px auto;
-  grid-gap: 20px;
+  grid-gap: 40px;
   padding: 40px;
 }
-#cartimg1 {
-  grid-column: 3;
+.cartimg {
+  grid-column: 1;
   grid-row: 1;
 }
-#cartimg2 {
-  grid-column: 3;
-  grid-row: 2;
+
+.cartimg span {
+
+  font-family: Helvetica, 'Gill Sans', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 12px;
+  text-decoration: underline;
+  font-weight: 600;
+
 }
-#cartinfo1 {
-  grid-column: 4 / 7;
+
+.cartinfo {
+  grid-column: 2 / 7;
   grid-row: 1;
+  padding: 10px;
 }
-#cartinfo2 {
-  grid-column: 4 / 7;
-  grid-row: 2;
-}
-#cartprice1 {
+
+.cartprice {
   grid-column: 6;
   grid-row: 1;
   justify-self: end;
 }
-#cartprice2 {
-  grid-column: 6;
-  grid-row: 2;
-  justify-self: end;
-}
+
+
+
 .cartline {
   grid-column: 3 / 7;
   grid-row: 3;
@@ -218,11 +227,14 @@ h2 {
   grid-column: 3 / 7;
   grid-row: 4;
   justify-self: end;
+  padding-right: 20px;
+  
 }
 .checkoutbutton {
   grid-column: 3 / 7;
   grid-row: 5;
   justify-self: end;
+  padding-right: 20px;
 }
 .checkout p {
   text-align: right;
@@ -288,3 +300,42 @@ h2 {
 .productdetail .dropdown, .productdetail .buttonprice {
   margin-left: 30px;
 }
+
+
+#shopcart {
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+  gap: 20px; 
+  padding: 40px;
+}
+
+.cart-item {
+  width: 100%; 
+}
+
+.cart-item {
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  grid-template-rows: auto auto auto auto;
+  grid-gap: 10px;
+ 
+}
+
+.cart-item img {
+  max-width: 100%;
+  height: auto;
+}
+
+.cart-item .remove {
+  text-decoration: underline;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.cartline {
+  grid-column: 1 / 7;
+  grid-row: 3;
+  border: none; 
+}
+
