--- a/puiproject/style.css
+++ b/puiproject/style.css
@@ -1,6 +1,6 @@
 
 body {
-  background-color: #ccab78;
+  background-color: #292225;
   background-image: url("parchment.jpeg");
   background-repeat: repeat-y;
   text-align: center;
@@ -9,12 +9,12 @@ body {
 
 h1 {
   font-family: 'Pixelify Sans', sans-serif;
-  color: #292225;
+  color: #ccab78;
   font-size: 35px;
 }
 
 p {
   font-family: 'Pixelify Sans', sans-serif;
-  color: #292225;
+  color: #ccab78;
   font-size: 15px;
 }
